[package]
name = "glow_glyph"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2018"
description = "A fast text renderer for glow, powered by glyph_brush"
license = "MIT"
keywords = ["font", "ttf", "truetype", "glow", "text"]
repository = "https://github.com/hecrj/glow_glyph"
documentation = "https://docs.rs/glow_glyph"
readme = "README.md"

[dependencies]
glow = "0.4"
glyph_brush = "0.6"
log = "0.4"
bytemuck = "1.2"

[dev-dependencies]
glutin = "0.24"
env_logger = "0.7"
