[package]
name = "glow_glyph"
version = "0.4.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2018"
description = "A fast text renderer for glow, powered by glyph_brush"
license = "MIT"
keywords = ["font", "ttf", "truetype", "glow", "text"]
repository = "https://github.com/hecrj/glow_glyph"
documentation = "https://docs.rs/glow_glyph"
readme = "README.md"

[dependencies]
glyph_brush = "0.7"
log = "0.4"
bytemuck = "1.4"

[dependencies.glow]
version = "0.11"
git = "https://github.com/derezzedex/glow"
rev = "e186ae56bd612d6396307ca22ecb9ae4ba06428f"

[dev-dependencies]
glutin = "0.25"
env_logger = "0.8"
